both sides can attack, need attack order, text display, and win lost

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,22 @@
   height: 75px;
 }
 
+#enemy-hp-bar {
+  position: absolute;
+  left:60px;
+  top: 50px;
+  width: 100px;
+  height: 10px;
+}
+
+#player-hp-bar {
+  position: absolute;
+  right:45px;
+  bottom: 80px;
+  width: 100px;
+  height: 10px;
+}
+
 #icon-spot{
   position: absolute;
   bottom: 5px;
