--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,9 @@
 	height: 200px;
 	width:500px;
 }
-
+body {
+    background-image: url("../images/background4.jpg");
+}
 
 @font-face {
     font-family: pokemonFont;
@@ -34,6 +36,7 @@
   position: absolute;
   right: 50px;
   bottom: 40px;
+  font-family: pokemonFont;
 
 }
 
@@ -82,32 +85,32 @@
 
 .container { margin-top: 25px; }
 
+.char-select,  .enemey-select {
+  margin-right: 15px;
+}
+
+#enemy-pokemon-name {
+  position: absolute;
+  top: 20px;
+  left: 55px;
+  font-family: pokemonFont;
+}
+
+#player-pokemon-name {
+  position: absolute;
+  bottom: 85px;
+  right: 40px;
+  font-family: pokemonFont;
+}
 
 #player { 
   position: absolute;
-  bottom: 15px;
-  left: 30px;
+  bottom: 25px;
+  left: 40px;
  }
 
 .battle-target {
   position: absolute;
-  top: 15px;
-  right: 30px;
+  top: 25px;
+  right: 40px;
  }
- }
-#button-up{
-	margin-left: 30px;
-}
-#button-down{
-	margin-left: 30px;
-}
-
-.btn-circle.btn-lg {
-  width: 50px;
-  height: 50px;
-  padding: 10px 16px;
-  font-size: 18px;
-  line-height: 1.33;
-  border-radius: 25px;
-  margin-left: 40px;
-}
